// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c2 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={false}
    id="input-1"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 2`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c3 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 50px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue="foo"
    disabled={false}
    id="input-2"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c2"
    description=""
    style={
      Object {
        "color": "",
      }
    }
  >
    cancel
  </span>
  
  
</div>
`;

exports[`Input component  should match the snapshot 3`] = `
.c2 {
  display: block;
  line-height: 1.5;
  margin-bottom: 5px;
  font-size: 16px;
  margin-bottom: 0;
  padding: 8px 12px 0px 12px;
  font-weight: bold;
}

.c3 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c3:hover,
.c3:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c3[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3::-webkit-calendar-picker-indicator {
  display: none;
}

.c3:focus + .c1 {
  color: #03a9f4;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  <label
    className="c1 c2"
    htmlFor="input-3"
  >
    Text label
  </label>
  
  <input
    className="c3"
    defaultValue=""
    disabled={false}
    id="input-3"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 4`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  border-color: #ff2d4d;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1:hover,
.c1:focus {
  border-color: #ff2d4d;
  box-shadow: 0 2px 6px 0 #ff2d4d;
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c4 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c2 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 50px;
  color: #ff2d4d;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

.c3 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  padding: 8px 12px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={false}
    id="input-4"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c2"
    description=""
    style={
      Object {
        "color": "",
      }
    }
  >
    error
  </span>
  <div
    className="c3"
  >
    Error message
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 5`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c2 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={false}
    id="input-5"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 6`] = `
.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  padding: 10px 42px 10px 42px;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:focus + .c3 {
  color: #03a9f4;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c1 {
  cursor: pointer;
  position: absolute;
  right: 12px;
  top: 50px;
  left: 12px;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <span
    aria-hidden="true"
    className="material-icons MuiIcon-root-1 c1"
    description=""
    style={
      Object {
        "color": "",
      }
    }
  >
    search
  </span>
  <input
    className="c2"
    defaultValue=""
    disabled={false}
    id="input-6"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 7`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c2 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={true}
    id="input-7"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 8`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c3 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

.c2 {
  color: #4c4c4c;
  cursor: text;
  display: block;
  font-size: 14px;
  font-style: italic;
  font-weight: 600;
  padding: 8px 12px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={false}
    id="input-8"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  <span
    className="c2"
  >
    this is a helper text
  </span>
</div>
`;

exports[`Input component  should match the snapshot 9`] = `
.c2 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c2[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2::-webkit-calendar-picker-indicator {
  display: none;
}

.c2:focus + .c3 {
  color: #03a9f4;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

.c1 {
  color: #4c4c4c;
  cursor: text;
  display: block;
  font-size: 14px;
  padding: 0px 12px;
}

<div
  className="c0"
>
  
  <span
    className="c1"
  >
    this is a description label
  </span>
  <input
    className="c2"
    defaultValue=""
    disabled={false}
    id="input-9"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder=""
    type="text"
  />
  
  
  
</div>
`;

exports[`Input component  should match the snapshot 10`] = `
.c1 {
  box-sizing: border-box;
  margin-top: 8px;
  padding-right: 42px;
  background-color: #FFFFFF;
  border-radius: 4px;
  border: 1.5px solid #999999;
  color: #4c4c4c;
  font-size: initial;
  height: 44px;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  padding: 10px 12px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  color: #999999;
}

.c1:hover,
.c1:focus {
  border-color: #1355d0;
  box-shadow: 0 2px 6px 0 rgba(19,85,208,0.5);
}

.c1[disabled] {
  background-color: #f2f2f2;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c1::-webkit-calendar-picker-indicator {
  display: none;
}

.c1:focus + .c2 {
  color: #03a9f4;
}

.c1:-webkit-autofill {
  box-shadow: 0 0 0px 1000px #e5edfc inset;
  -webkit-text-fill-color: #4c4c4c;
}

.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
  margin: 40px 0 20px;
}

.c0:first-child {
  margin-top: 20px;
}

<div
  className="c0"
>
  
  
  <input
    className="c1"
    defaultValue=""
    disabled={false}
    id="input-10"
    maxLength=""
    onBlur={[Function]}
    onChange={[Function]}
    placeholder="this input has a placeholder"
    type="text"
  />
  
  
  
</div>
`;
